# rtve-dl

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  caches.md  global_phrase_cache.example.json  pyproject.toml
docs/: architecture.md  prompt_tests.md  subtitle_timing.md  todo_alignment.md  whisperx_mps_setup.md
prompts/: gloss_cefr_ru.md  translate_full_ru.md
sql/: reports.sql
src/rtve_dl/: asr_mlx.py  asr_whisperx.py  cli.py  codex_batch.py  codex_en.py  codex_es_clean.py  codex_ru.py  codex_ru_refs.py  constants.py  ffmpeg.py  global_phrase_cache.py  http.py  index_html.py  log.py  ru.py  telemetry.py  tmp_layout.py
src/rtve_dl/lexicon/: phrases.py  store.py  sync.py
src/rtve_dl/prompts/: __init__.py  en_mt.md  es_clean.md  ru_full.md  ru_refs.md
src/rtve_dl/rtve/: api.py  catalog.py  constants.py  descargavideos_compat.py  png_thumbnail.py  resolve.py
src/rtve_dl/sql/: __init__.py  reports.sql  schema.sql
src/rtve_dl/subs/: align_whisperx.py  augment.py  dedup.py  delay_auto.py  mine_phrases.py  srt.py  srt_parse.py  terms.py  vtt.py
src/rtve_dl/subtitle_tracks/: builders.py  defaults.py  models.py  orchestrator.py  policy.py
src/rtve_dl/translate/: batch.py
src/rtve_dl/workflows/: download.py  mux_url.py  subtitles.py
tests/: test_alignment.py  test_default_subtitle_selection.py  test_es_clean_context.py  test_ffmpeg_mux.py  test_ru_orchestrator_cache.py  test_subs_mux.py  test_track_languages.py  test_track_policy.py
tests/fixtures/whisperx_align/: README.md  sample_es.srt
tools/: argos_runner.py  dv_rtve_one.py  extract_alignment_fixture.py  rtve_parallel_status.sh  test_complex_terms_titles.sh  test_ru_refs_prompt.sh  test_sonnet_1m.sh  whisperx_align_smoketest.py
tools/fixtures/: ru_refs_446.tsv  ru_refs_446_expected_notes.md  ru_refs_small.tsv  ru_refs_small_expected_notes.md
